--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Database
+*.db
+
+# Emacs detritus
+*~
+
+# MacOS Spotlight index files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
